Arrumado o problema das imagens zoadas.

--- a/Src/HTML/index.html
+++ b/Src/HTML/index.html
@@ -4,13 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Para Elas</title>
-    <link rel="stylesheet" href="../CSS/reset.css">
-    <link rel="stylesheet" href="../CSS/styles.css">
     <link rel="stylesheet" href="../CSS/index.css">
-    <script defer src="index.js"></script>
-    <!-- Bibliotecas -->
+    <link rel="stylesheet" href="../CSS/styles.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+    <script defer src="../JS/index.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -22,7 +20,7 @@
 <body>
     <header>
         <div class="container">
-            <h1><img src="logo.png" alt="Para Elas" ></h1>
+            <h1><img src="../Figuras/logo.png" alt="Para Elas" ></h1>
             <nav>
                 <ul>
                     <li><a href="index.html">Início</a></li>
@@ -37,7 +35,7 @@
             <section class="hero">
                 <div class="carousel">
                     <div class="carousel-slide">            
-                        <img src="Figuras/empresas_comprometidas.jpg" alt="Imagem 2">
+                        <img src="../Figuras/empresas_comprometidas.jpg" alt="Imagem 2">
                         <div class="carousel-overlay">
                             <h2>Onde as mulheres estão</h2>
                             <p>Tenha acesso ao ranking das empresas mais bem-avaliadas no quesito representatividade feminina, segundo nossos levantamentos.</p>
@@ -45,7 +43,7 @@
                         </div>
                     </div>
                     <div class="carousel-slide">
-                        <img src="Figuras/empresa_inclusiva.jpg" alt="Imagem 1">
+                        <img src="../Figuras/empresa_inclusiva.jpg" alt="Imagem 1">
                         <div class="carousel-overlay">
                             <h2>Não perca essas oportunidades</h2>
                             <p>Ainda em dúvida? Dê uma olhada nas vagas oferecidas nas melhores empresas para mulheres em todas as áreas da tecnologia.</p>
