nao lembro o que eu fiz eu dormi, eu acho que foi mudar cores e outros

--- a/Src/HTML/index.html
+++ b/Src/HTML/index.html
@@ -24,8 +24,8 @@
             <nav>
                 <ul>
                     <li><a href="index.html">Início</a></li>
-                    <li><a href="empresas.html">Empresas</a></li>
-                    <li><a href="sobre.html">Sobre Nós</a></li>
+                    <li><a href="empresas.html">Cadastre-se</a></li>
+                    <li><a href="sobre.html">Área</a></li>
                 </ul>
             </nav>
         </div>
@@ -35,15 +35,23 @@
             <section class="hero">
                 <div class="carousel">
                     <div class="carousel-slide">            
-                        <img src="../Figuras/empresas_comprometidas.jpg" alt="Imagem 2">
+                        <img src="../Figuras/a.avif" alt="Imagem 2">
                         <div class="carousel-overlay">
-                            <h2>Onde as mulheres estão</h2>
-                            <p>Tenha acesso ao ranking das empresas mais bem-avaliadas no quesito representatividade feminina, segundo nossos levantamentos.</p>
+                            <h2>Quem são nossos parceiros?</h2>
+                            <p>Tenha acesso ao ranking das empresas que mais coletam recicláveis limpos, segundo nossos levantamentos.</p>
                             <a href="aval.html" class="btn-primary">Saiba Mais</a>
                         </div>
                     </div>
                     <div class="carousel-slide">
-                        <img src="../Figuras/empresa_inclusiva.jpg" alt="Imagem 1">
+                        <img src="../Figuras/b.avif" alt="Imagem 1">
+                        <div class="carousel-overlay">
+                            <h2>Não perca essas oportunidades</h2>
+                            <p>Ainda em dúvida? Dê uma olhada nas vagas oferecidas nas melhores empresas para mulheres em todas as áreas da tecnologia.</p>
+                            <a href="explorecarreiras.html" class="btn-primary">Explore Carreiras</a>
+                        </div>
+                    </div>
+                    <div class="carousel-slide">
+                        <img src="../Figuras/c.avif" alt="Imagem 1">
                         <div class="carousel-overlay">
                             <h2>Não perca essas oportunidades</h2>
                             <p>Ainda em dúvida? Dê uma olhada nas vagas oferecidas nas melhores empresas para mulheres em todas as áreas da tecnologia.</p>
