--- a/Src/HTML/crescimento.html
+++ b/Src/HTML/crescimento.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Crescimento Pessoal</title>
-    <link rel="stylesheet" href="../CSS/crescimento.css">
+    <title>Reclick - </title>
+    <link rel="stylesheet" href="../CSS/descarte.css">
     <link rel="stylesheet" href="../CSS/styles.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
@@ -23,7 +23,7 @@
             <nav>
                 <ul>
                     <li><a href="index.html">Início</a></li>
-                    <li><a href="empresas.html">Empresas</a></li>
+                    <li><a href="cadastro.html">Cadastrar</a></li>
                     <li><a href="sobre.html">Sobre Nós</a></li>
                 </ul>
             </nav>
@@ -62,7 +62,9 @@
         </section>
     </main>
     <footer>
-        <p>&copy; 2024 Para Elas. Todos os direitos reservados.</p>
+        <div class="container">
+            <p>&copy; 2024 Reclick. Todos os direitos reservados.</p>
+        </div>
     </footer>
 </body>
 </html>
