--- a/Src/HTML/index.html
+++ b/Src/HTML/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Para Elas</title>
+    <title>Reclick</title>
     <link rel="stylesheet" href="../CSS/index.css">
     <link rel="stylesheet" href="../CSS/styles.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
@@ -20,12 +20,12 @@
 <body>
     <header>
         <div class="container">
-            <h1><img src="../Figuras/logo.png" alt="Para Elas" ></h1>
+            <h1><img src="../Figuras/logo.png" alt="Reclick" ></h1>
             <nav>
                 <ul>
                     <li><a href="index.html">Início</a></li>
-                    <li><a href="empresas.html">Cadastre-se</a></li>
-                    <li><a href="sobre.html">Área</a></li>
+                    <li><a href="cadastro.html">Cadastrar</a></li>
+                    <li><a href="sobre.html">Sobre Nós</a></li>
                 </ul>
             </nav>
         </div>
@@ -34,28 +34,20 @@
         <div class="container">
             <section class="hero">
                 <div class="carousel">
-                    <div class="carousel-slide">            
-                        <img src="../Figuras/a.avif" alt="Imagem 2">
-                        <div class="carousel-overlay">
-                            <h2>Quem são nossos parceiros?</h2>
-                            <p>Tenha acesso ao ranking das empresas que mais coletam recicláveis limpos, segundo nossos levantamentos.</p>
-                            <a href="aval.html" class="btn-primary">Saiba Mais</a>
-                        </div>
-                    </div>
                     <div class="carousel-slide">
                         <img src="../Figuras/b.avif" alt="Imagem 1">
                         <div class="carousel-overlay">
-                            <h2>Não perca essas oportunidades</h2>
-                            <p>Ainda em dúvida? Dê uma olhada nas vagas oferecidas nas melhores empresas para mulheres em todas as áreas da tecnologia.</p>
-                            <a href="explorecarreiras.html" class="btn-primary">Explore Carreiras</a>
+                            <h2>O "Click" que faltava!</h2>
+                            <p>A solução que funciona, pra parar de varrer o lixo pra baixo do tapete.</p>
+                            <a href="explorecarreiras.html" class="btn-primary">Quero Conhecer</a>
                         </div>
                     </div>
-                    <div class="carousel-slide">
-                        <img src="../Figuras/c.avif" alt="Imagem 1">
+                    <div class="carousel-slide">            
+                        <img src="../Figuras/a.avif" alt="Imagem 2">
                         <div class="carousel-overlay">
-                            <h2>Não perca essas oportunidades</h2>
-                            <p>Ainda em dúvida? Dê uma olhada nas vagas oferecidas nas melhores empresas para mulheres em todas as áreas da tecnologia.</p>
-                            <a href="explorecarreiras.html" class="btn-primary">Explore Carreiras</a>
+                            <h2>Vamos Ser Parceiros?</h2>
+                            <p>Bares e Restaurantes parceiros podem ter acesso a benefícios especiais nessa luta pela sustentabilidade</p>
+                            <a href="bar.html" class="btn-primary">Saiba Mais</a>
                         </div>
                     </div>
                 </div>
@@ -73,14 +65,14 @@
                         <a href="transparencia.html" class="btn-secondary">Saiba Mais</a>
                     </div>
                     <div class="card">
-                        <h3>Crescimento pessoal</h3>
-                        <p>Não tem certeza que a área de tecnologia é para você? Entenda melhor esse mercado e como você pode fazer parte dele.</p>
-                        <a href="crescimento.html" class="btn-secondary">Saiba Mais</a>
-                    </div>
-                    <div class="card">
                         <h3>Empresas comprometidas</h3>
                         <p>Conheça empresas que já se aliaram a nós nessa missão de criar ambientes de trabalho com maior representatividade feminina.</p>
                         <a href="parceiros.html" class="btn-secondary">Saiba Mais</a>
+                    </div>
+                    <div class="card">
+                        <h3>Ainda em Dúvida?</h3>
+                        <p>Veja como devem ser descartados os principais resíduos poluentes</p>
+                        <a href="descarte.html" class="btn-secondary">Saiba Mais</a>
                     </div>
                 </div>
             </section>
@@ -89,7 +81,7 @@
     
     <footer>
         <div class="container">
-            <p>&copy; 2024 Para Elas. Todos os direitos reservados.</p>
+            <p>&copy; 2024 Reclick. Todos os direitos reservados.</p>
         </div>
     </footer>
 </body>
