--- a/Src/HTML/sobre.html
+++ b/Src/HTML/sobre.html
@@ -24,7 +24,7 @@
             <nav>
                 <ul>
                     <li><a href="index.html">Início</a></li>
-                    <li><a href="empresas.html">Empresas</a></li>
+                    <li><a href="cadastro.html">Cadastrar</a></li>
                     <li><a href="sobre.html">Sobre Nós</a></li>
                 </ul>
             </nav>
@@ -58,7 +58,7 @@
     </div>
     <footer>
         <div class="container">
-            <p>&copy; 2024 Para Elas. Todos os direitos reservados.</p>
+            <p>&copy; 2024 Reclick. Todos os direitos reservados.</p>
         </div>
     </footer>
     <script>
