Inserção dos materiais a serem reciclados

--- a/Src/HTML/descarte.html
+++ b/Src/HTML/descarte.html
@@ -47,7 +47,7 @@
                 <div class="job-card" data-title="Metais" data-company="Tech Solutions" onclick="showJobDetails('job3')">
                     <h2 class="job-title">Metais</h2>
                 </div>
-                <div class="job-card" data-title="Vidros" data-company="Data Insights" onclick="showJobDetails('job5')">
+                <div class="job-card" data-title="Vidros" data-company="Data Insights" onclick="showJobDetails('job4')">
                     <h2 class="job-title">Vidros</h2>
                 </div>
                 <!-- Adicione mais cartões de vaga conforme necessário -->
@@ -78,12 +78,40 @@
                     <p class="company">
                         Latinhas são 100% recicladas no Brasil, o que faz do metal o material com maior taxa de reciclagem dentre os demais materiais.
                         <br>
-
+                        Quanto aos metais, nossa prospecção de mercado aponta que o Brasil é um dos países que mais recicla alumínio no mundo. 
+                        Dentre as latinhas, 98,7% são reprocessados e reutilizadas, 
+                        dentre um total comercializado de 411 mil toneladas. Como o alumínio é vendido a R$ 6,30 o quilo, 
+                        isso representa um potencial de mercado de aproximadamente R$ 300 milhões.
+                        <br>
+                        A reciclagem de outros metais, ferrosos e não ferrosos, também é importante. 
+                        E rentável. A reinserção de metais nas cadeias de produção e consumo gasta até 90% menos energia elétrica, 
+                        dispensando a retirada de matérias-primas escassas da natureza. 
+                        Isso representa uma porção ainda não tão bem aproveitada do potencial de mercado.
+                        <br>
+                        Para o descarte correto é necessário que sejam removidos resíduos visíveis, em que latas de
+                        bebidas e alimentos devem ter seu conteúdo despejado, ao passo que os oleosos e gordurosos
+                        exigem uma escovação extra. Em seguida, basta o enxágue, a secagem e uma possível dobragem ou
+                        amassagem da lata. Se tiverem tampas não metálicas, remova esse material.
+                        <br>
+                        Cuidado, acima de tudo, de latas muito enferrujadas sob o risco de contração de
+                        Tétano.
                     </p>
                 </div>
                 <div id="job4" class="job-detail-card">
                     <h2 class="job-title">Vidros</h2>
-                    <p class="company"><b>Empresa:</b> Santi</p>
+                    <p class="company"> 
+                        O vidro descartado no meio ambiente pode levar
+                        até um milhão de anos para se decompor. Ele também a matéria prima
+                        menos reciclada no Brasil: apenas 11%. Cada quilo de vidro reciclado gera um quilo de vidro para reinserção. 
+                        Ou seja, o vidro é um protagonista da economia circular, com 100% de aproveitamento.
+                        <br>
+                        Para uma melhor reciclagem, a eficiência é maior quando separado por cores
+                        (Transparente, verde e âmbar). Retire as impurezas e lave-os com detergente e sabão.
+                        <br>
+                        Tampas, rolhas, rótulos e adesivos precisam ser retirados.
+                        <br>
+                        Lembre-se que existem vidros não recicláveis, como os temperados, de cerâmica e cristal.
+                    </p>
                 </div>
                 <!-- Adicione mais detalhes de vaga conforme necessário -->
             </div>
