--- a/Src/HTML/crescimento.html
+++ b/Src/HTML/crescimento.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Reclick - </title>
-    <link rel="stylesheet" href="../CSS/descarte.css">
+    <link rel="stylesheet" href="../CSS/crescimento.css">
     <link rel="stylesheet" href="../CSS/styles.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
@@ -34,29 +34,44 @@
         <section class="growth" id="section1">
             <div class="growth-section">
                 <div class="text">
-                    <h2>Não tem certeza que a área de tecnologia é para você?</h2>
-                    <p>Entenda melhor esse mercado e como você pode fazer parte dele. A tecnologia é uma área em constante crescimento e oferece inúmeras oportunidades para todos, especialmente para mulheres. A inclusão e a diversidade são pilares importantes no mundo da tecnologia, e você pode fazer a diferença.</p>
+                    <h2>Uma lixeira inovadora</h2>
+                    <p>
+                        Nosso produto trata uma lixeira mais sustentável, que permite a lavagem antes do descarte.
+                        
+                    </p>
                 </div>
                 <div class="image">
-                    <img src="../Figuras/trabalho.png" alt="Tecnologia">
+                    <img src="../Figuras/Torneira.png" alt="Tecnologia">
+                    <img src="../Figuras/Lixeira.png" alt="Tecnologia">
                 </div>
             </div>
             <div class="growth-section invertido">
                 <div class="text">
-                    <h2>Estatísticas Atrativas</h2>
-                    <p>De acordo com diversos estudos, as mulheres na tecnologia têm uma perspectiva de carreira extremamente positiva. Com uma demanda crescente por habilidades técnicas, a área de tecnologia oferece salários competitivos, oportunidades de crescimento e um ambiente de trabalho dinâmico e inovador.</p>
+                    <h2>Sistemas de Bonificação</h2>
+                    <p>
+                        Tampas inteligentes que abrem após a abertura das torneiras, com balanças para averiguar o peso do lixo processado.
+                        As latas de lixeira são metálicas, com diâmtero de 60 cm, e volume de 60 litros.
+                        No fundo, temos balanças que já calculam o peso do lixo recém processado. Ao fim, clientes recebem créditos pelo lixo coletado
+                        e bares e restaurantes, mais outros valores monetários, pela parceria em manuteção do equipamento.
+                    </p>
                 </div>
                 <div class="image">
-                    <img src="../Figuras/dev-research.cfaac198.png" alt="Estatísticas">
+                    <img src="../Figuras/Tampa.png" alt="Estatísticas">
+                    <img src="../Figuras/Basura.png" alt="Estatísticas">
                 </div>
             </div>
             <div class="growth-section">
                 <div class="text">
-                    <h2>Programar é Legal</h2>
-                    <p>Aprender a programar não é apenas uma habilidade valiosa no mercado de trabalho, mas também uma atividade divertida e gratificante. Você pode criar aplicativos, desenvolver websites e até mesmo trabalhar em projetos de inteligência artificial. A criatividade e a lógica se unem na programação, tornando-a uma das áreas mais emocionantes para se explorar.</p>
+                    <h2>Sistemas Integrados e Inteligentes</h2>
+                    <p>
+                        Nossos equipamentos envolvem o reúso de água com bombas e manutenção de galão de água pelos restaurantes e pelos bares.
+                        <br>
+                        E, para acessar a página do cadastramento de lixo, basta clicar no botão na barra de navegação e comece já!
+                    </p>
                 </div>
                 <div class="image">
-                    <img src="../Figuras/boost.png" alt="Programação">
+                    <img src="../Figuras/Bomba.png" alt="Programação">
+                    <img src="../Figuras/QRCode.png" alt="Programação">
                 </div>
             </div>
         </section>
