--- a/Src/HTML/index.html
+++ b/Src/HTML/index.html
@@ -39,7 +39,7 @@
                         <div class="carousel-overlay">
                             <h2>O "Click" que faltava!</h2>
                             <p>A solução que funciona, pra parar de varrer o lixo pra baixo do tapete.</p>
-                            <a href="explorecarreiras.html" class="btn-primary">Quero Conhecer</a>
+                            <a href="transparencia.html" class="btn-primary">Quero Conhecer</a>
                         </div>
                     </div>
                     <div class="carousel-slide">            
@@ -57,17 +57,12 @@
                 <button class="dot-btn" data-slide="1"></button>
             </div>
             <section class="features">
-                <h1>Conectando mulheres a empresas que as valorizam.</h1>
+                <h1>Conectando ideias por um futuro mais sustentável.</h1>
                 <div class="feature-cards">
                     <div class="card">
-                        <h3>Transparência</h3>
-                        <p>Entenda como coletamos nossos dados e avaliamos a representatividade feminina nas mais diversas empresas de tecnologia.</p>
-                        <a href="transparencia.html" class="btn-secondary">Saiba Mais</a>
-                    </div>
-                    <div class="card">
-                        <h3>Empresas comprometidas</h3>
-                        <p>Conheça empresas que já se aliaram a nós nessa missão de criar ambientes de trabalho com maior representatividade feminina.</p>
-                        <a href="parceiros.html" class="btn-secondary">Saiba Mais</a>
+                        <h3>Nossos Produtos</h3>
+                        <p>Conheça nossas inovações.</p>
+                        <a href="crescimento.html" class="btn-secondary">Saiba Mais</a>
                     </div>
                     <div class="card">
                         <h3>Ainda em Dúvida?</h3>
