atualizacao da transparencia

--- a/Src/HTML/transparencia.html
+++ b/Src/HTML/transparencia.html
@@ -51,12 +51,14 @@
                 <div class="transparency-section invertido tp-2">
                     <div class="text">
                         <h2>Mais de 60% do lixo reciclável é descartado</h2>
-                        <p>No coração da nossa proposta está a NeoDeskart, 
-                            uma lixeira inteligente que registra e recompensa 
-                            o descarte correto de resíduos recicláveis. 
-                            Ela será instalada em locais de alto fluxo, como restaurantes e bares, 
-                            permitindo que os usuários limpem, classifiquem e descartem seus materiais recicláveis com facilidade, 
-                            recebendo recompensas financeiras proporcionais ao peso descartado.
+                        <p> 
+                            Por conta do descarte incorreto e da falta de conscientização, mesmo o lixo
+                            próprio para reciclagem (~40% do total) acaba sendo contaminado e descartado.
+                            No modelo atual, apenas 4% de todo lixo produzido no Brasil acaba sendo, de fato,
+                            reciclado.
+                            <br><br>
+                            O resto do lixo frequentemente vai parar em Aterros Sanitarios superlotados, 
+                            contaminando o solo, rios e mares, expandindo o problema
                         </div>
                     <div class="image">
                         <img src="../Figuras/dev-research.cfaac198.png" alt="Imagem explicando como funciona">
@@ -65,66 +67,45 @@
 
                 <div class="transparency-section tp-3">
                     <div class="text">
+                        <h2>Diga Adeus as lixeirinhas coloridas!</h2>
+                        <p>O cesto azul é para jogar o papel. No vermelho, vai o plástico. 
+                            O verde é para o vidro e o amarelo é para o metal. Isso é o que 
+                            muitas vezes se aprende a respeito da reciclagem. No entanto, 
+                            essa separação não funciona de fato no Brasil, pois o lixo chegará na 
+                            cooperativa e será misturado.
+                            <br><br>
+                            <h3>Cestos coloridos podem confundir mais do que ajudar; é hora de simplificar a coleta seletiva.</h3>
+                    </div>
+                    <div class="image">
+                        <img src="../Figuras/dev-research.cfaac198.png" alt="Imagem explicando como funciona">
+                    </div>
+                </div>
+
+                <div class="transparency-section invertido">
+                    <div class="text">
                         <h2>A Solução: NeoDeskart </h2>
-                        <p>No coração da nossa proposta está a NeoDeskart, 
+                        <p>No coração da nossa proposta está a <b>NeoDeskart!</b>, 
                             uma lixeira inteligente que registra e recompensa 
                             o descarte correto de resíduos recicláveis. 
                             Ela será instalada em locais de alto fluxo, como restaurantes e bares, 
                             permitindo que os usuários limpem, classifiquem e descartem seus materiais recicláveis com facilidade, 
                             recebendo recompensas financeiras proporcionais ao peso descartado.
-                        </div>
+                    </div>
                     <div class="image">
                         <img src="../Figuras/dev-research.cfaac198.png" alt="Imagem explicando como funciona">
                     </div>
-                    <!-- <div class="text">
-                        <h2>Modelo de Negócio Sustentável  </h2>
-                        <p>O modelo da ReClick! é vantajoso para todos:  </p>
-                        <div class="examples">
-                            <div class="example">
-                                <h4>Usuários</h4>
-                                <p>São recompensados por seu compromisso com a reciclagem. </p>
-                            </div>
-                            <div class="example">
-                                <h4>Estabelecimentos</h4>
-                                <p>Geram receita ao vender resíduos recicláveis.  </p>
-                            </div>
-                            <div class="example">
-                                <h4>ReClick!</h4>
-                                <p>Lucra intermediando a venda para recicladoras.   </p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="image">
-                        <img src="../Figuras/boost.png" alt="Imagem de exemplo de análise">
-                    </div> -->
                 </div>
 
                 <div class="transparency-section invertido">
                     <div class="text">
                         <h2>Potencial Financeiro da Reciclagem  </h2>
-                        <p>Com base nos dados de produção de lixo na Rua Augusta e nos preços atuais dos materiais recicláveis:  </p>
+                        <p> Hoje, a rede de reciclagem fomenta um mercado Bilionário em todo o Brasil</p>
                         <div class="examples">
-                            <div class="example">
-                                <h4>Alumínio:</h4>
-                                <p>Com o preço atual de R$ 5,36/kg, um estabelecimento que descarta 10kg de latas recicláveis pode gerar R$ 53,60. </p>
-                            </div>
-                            <div class="example">
-                                <h4>Papelão: </h4>
-                                <p>Apesar da queda para R$ 0,21/kg, um volume de 20kg ainda geraria R$ 4,20.  </p>
-                            </div>
-                            <div class="example">
-                                <h4> PET: </h4>
-                                <p>A R$ 0,98/kg, 15kg de garrafas PET renderiam R$ 14,70.   </p>
-                            </div>
-                            <div class="example">
-                                <h4>Papel branco e jornal: </h4>
-                                <p>Embora os preços tenham caído, há potencial para complementar as receitas com o descarte frequente.  </p>
-                            </div>
                             <p>
-                                Em um dia típico, estabelecimentos que produzem entre 250L e 500L de lixo podem separar 40% de resíduos recicláveis, 
-                                gerando uma média de R$ 20 a R$ 50 por dia, dependendo do mix de materiais. 
-                                Esse valor, acumulado ao longo de um mês, pode ultrapassar R$ 1.500 em receita adicional — um benefício compartilhado entre o consumidor, 
-                                o estabelecimento e a ReClick!.  
+                                Atualmente o mercado de reciclagem já movimenta cerca de de R$ 10 Bilhões por ano.
+                                Ainda assim, o Brasil "deixa de ganhar" R$ 14 bilhões anuais devido à reciclagem 
+                                inadequada, com 12 milhões de toneladas de resíduos sólidos que poderiam 
+                                gerar renda e empregos, mas acabam poluindo o meio ambiente.
                             </p>
                         </div>
                     </div>
