--- a/Src/HTML/sobre.html
+++ b/Src/HTML/sobre.html
@@ -33,26 +33,27 @@
     <div class="container">
         <section class="features">
         <h1>Quem Somos Nós</h1>
-        <p>De mulheres para mulheres</p>
         </section>
     </div>
     <div class="challenges">
         <div class="challenge">
-            <h3>Bianca Costa Galvão</h3>
-            <img src="../Figuras/Bibi.jpeg" alt="Bianca">
-            <p>20 Anos</p>
+            <h3>André de Lima Schwartz</h3>
             <p>Estudante do Bacharelado em Ciência da Computação IME-USP</p>
         </div>
         <div class="challenge">
-            <h3>Helena Baptista Reis</h3>
-            <img src="../Figuras/Lena.png" alt="Helena">
-            <p>20 anos</p>
-            <p>Estudante do Bacharelado em Ciências Moleculares USP</p>
+            <h3>João Victor Ferreira</h3>
+            <p>Estudante do Bacharelado em Ciência da Computação IME-USP</p>
         </div>
         <div class="challenge">
             <h3>Nathália Yukimi Uchiyama Tsuno</h3>
-            <img src="../Figuras/Nat.jpeg" alt="Nathália">
-            <p>19 Anos</p>
+            <p>Estudante do Bacharelado em Ciência da Computação IME-USP</p>
+        </div>
+        <div class="challenge">
+            <h3>Nicolas Caldas Borsari</h3>
+            <p>Estudante do Bacharelado em Ciência da Computação IME-USP</p>
+        </div>
+        <div class="challenge">
+            <h3>Renata Meyer Hobold</h3>
             <p>Estudante do Bacharelado em Ciência da Computação IME-USP</p>
         </div>
     </div>
